[package]
name = "quipu"
version = "0.1.0"
edition = "2024"
description = "High-performance semantic indexing system with MiniLM embeddings and LanceDB storage"
authors = ["you"]

[lib]
name = "quipu"
path = "src/lib.rs"

[[bin]]
name = "quipu"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.8"
tempfile = "3.21"

lancedb = { version = "0.21.3", features = ["sentence-transformers"] }
lance-index = "0.33.0"
rust-bert = { version = "0.23.0", features = ["download-libtorch"] }
rust_tokenizers = "8"
tch = { version = "0.17", features = ["download-libtorch"] }
console = { version = "0.16", features = ["std"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

arrow = "55.1"
arrow-array = "55.1"
arrow-schema = "55.1"
jemallocator = "0.5.4"
jemalloc-ctl = "0.5.4"
